# better-clipboard

./: .gitignore  README.ja.md  README.md  caveman.json  package-lock.json
.ai/: plan.md  tasks.md
.opencode/: opencode.json  package.json
.opencode/instructions/: rust-skills.md
better-clipboard/: index.html  package-lock.json  package.json  settings.html  vite.config.ts
better-clipboard/src/: combo.css  combo.ts  main.ts  settings.css  settings.ts  styles.css
better-clipboard/src-tauri/: Cargo.toml  tauri.conf.json
better-clipboard/src-tauri/capabilities/: default.json
better-clipboard/src-tauri/locales/: en.json  ja.json
better-clipboard/src-tauri/src/: app_state.rs  commands.rs  fonts.rs  lib.rs  logging.rs  main.rs
better-clipboard/src-tauri/src/clipboard/: mod.rs
better-clipboard/src-tauri/src/config/: mod.rs
better-clipboard/src-tauri/src/db/: mod.rs
better-clipboard/src-tauri/src/locale/: mod.rs
better-clipboard/src-tauri/src/paste/: mod.rs
better-clipboard/src-tauri/src/tray/: mod.rs
