[package]
name = "better-clipboard"
version = "0.1.0"
description = "A extended clipboard utility"
authors = ["cet-t"]
edition = "2021"

[lib]
name = "better_clipboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs = "5"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
windows = { version = "0.58", features = [
  "Win32_System_Com",
  "Win32_UI_Accessibility",
] }
winapi = { version = "0.3", features = [
  "winuser",
  "winbase",
  "minwindef",
  "windef",
  "processthreadsapi",
  "winnls",
  "wingdi",
  "winreg",
] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
